--- a/cs61a.html
+++ b/cs61a.html
@@ -34,57 +34,19 @@
       
       <div id="titlearea">
         <h2>Suraj Rampure</h2>
-        <h4><a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="cs61a.html">CS 61A</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="data8.html"><strong>Data 8</strong></a></h4>
+        <h4><a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="cs61a.html"><strong>CS 61A</strong></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="data8.html">Data 8</a></h4>
       </div>
-      <div id="contentarea"><div class="cell markdown-cell"><h3><strong>Data 8, Fall 2017</strong></h3>
+      <div id="contentarea"><div class="cell markdown-cell"><h3><strong>CS 61A, Spring 2018</strong></h3>
 <p>
-  <strong>Lab:</strong> Thursdays, 3-5PM in 458 Evans, for those with no programming experience<br>
-  <strong>Office Hours:</strong> Tuesdays, 4-5PM in 254 Sutardja Dai Hall
+  <strong>Lab and Discussion:</strong>  N/A<br>
+  <strong>Office Hours:</strong> TBD
   <br><br>
   You can always contact me via email at <strong>suraj.rampure@berkeley.edu</strong>.
   <br><br>
-  Give me feedback <a href="https://goo.gl/forms/ocDDCYoxpBMBLRnH2"><strong>here</strong></a>.
 </p>
 
-
-<table class="center"> 
-<tr> <th></th> <th>Date</th> <th>Topic</th> <th>Slides (.pdf)</th> <th> Slides (.keynote)</tr> 
-<tr> <td>1</td><td>Aug. 24, 2017</td> <td>Welcome to Data 8!</td> <td><a href="resources/data8/pdf/week1.pdf">week1.pdf</a></td><td> <a href="resources/data8/key/week1.key">week1.key</a></td> </tr> 
-<tr> <td>2</td><td>Aug. 31, 2017</td> <td>Causality, Expressions, Arrays</td> <td><a href="resources/data8/pdf/week2.pdf">week2.pdf</a><td> <a href="resources/data8/key/week2.key"> week2.key</a></td></td>
-<tr> <td>3</td><td>Sept. 7, 2017</td> <td>Data Visualizations, Tables</td> <td><a href="resources/data8/pdf/week3.pdf">week3.pdf</a></td> <td> <a href="resources/data8/key/week3.key">week3.key</a></td></tr>
-<tr> <td>4</td><td>Sept. 14, 2017</td> <td>Histograms, Functions</td> <td><a href="resources/data8/pdf/week4.pdf">week4.pdf</a></td> <td> <a href="resources/data8/key/week4.key">week4.key</a></td></tr>
-<tr> <td>5</td><td>Sept. 21, 2017</td> <td>Histograms Review, Joins, Project 1</td> <td><a href="resources/data8/pdf/week5.pdf">week5.pdf</a></td> <td> <a href="resources/data8/key/week5.key">week5.key</a></td></tr>
-<tr> <td>6</td><td>Sept. 28, 2017</td> <td>Table Aggregation, Conditionals, Iteration and Sampling, Probability</td> <td><a href="resources/data8/pdf/week6.pdf">week6.pdf</a></td> <td> <a href="resources/data8/key/week6.key">week6.key</a></td></tr>
-<tr> <td>7</td><td>Oct. 5, 2017</td> <td>Midterm Review</td> <td>No slides</td><td>No slides</td></tr>
-<tr> <td>8</td><td>Oct. 12, 2017</td> <td>Hypothesis Testing, Extra Probability Practice (Discussion Solutions)</td> <td><a href="resources/data8/pdf/week8.pdf">week8.pdf</a></td> <td> <a href="resources/data8/key/week8.key">week8.key</a></td></tr>
-<tr> <td>9</td><td>Oct. 19, 2017</td> <td>Percentiles, Confidence Intervals</td> <td><a href="resources/data8/pdf/week9.pdf">week9.pdf</a></td> <td> <a href="resources/data8/key/week9.key">week9.key</a></td></tr>
-<tr> <td>10</td><td>Oct. 26, 2017</td> <td>Bootstrapping, More Confidence Intervals</td> <td><a href="resources/data8/pdf/week10.pdf">week10.pdf</a></td> <td> <a href="resources/data8/key/week10.key">week10.key</a></td></tr>
-<tr> <td>11</td><td>Nov. 2, 2017</td> <td>Sample Means, CLT, Correlation</td> <td><a href="resources/data8/pdf/week11.pdf">week11.pdf</a></td> <td> <a href="resources/data8/key/week11.key">week11.key</a></td></tr>
-<tr> <td>12</td><td>Nov. 9, 2017</td> <td>Linear Regression</td> <td><a href="resources/data8/pdf/week12.pdf">week12.pdf</a></td> <td> <a href="resources/data8/key/week12.key">week12.key</a></td></tr>
-
-</table>
-
-<p> Feel free to use and modify these slides, but please give me credit. </p>
-<br><br>
-
-<h4><strong>Videos</strong></h4>
-<p> While teaching Data 8, I've created several walkthrough and review videos. Take a look at them here: </p>
-<p><strong>Created in Fall 2017:</strong></p>
-<p><a href="https://www.youtube.com/watch?v=7P6zJmMV7AE">Histograms Midterm Review</a></p>
-<p><a href="https://www.youtube.com/watch?v=mdHvHv_lqLk">Summer 2017 Midterm Walkthrough</a></p>
-<p><a href="https://www.youtube.com/watch?v=rZfGEibJ0Og&feature=youtu.be">Spring 2017 Final Walkthrough</a></p>
-
-<p><strong>Created in Spring 2017:</strong></p>
-<p><a href="https://www.youtube.com/watch?v=LPMzXlYf8n8">Spring 2017 Midterm Walkthrough</a></p>
-<p><a href="https://www.youtube.com/watch?v=LR8Zfa1JovA">Fall 2016 Midterm Walkthrough</a></p>
-<p><a href="https://www.youtube.com/watch?v=oaNolUkZTL0">Spring 2016 Final Walkthrough</a></p>
-
-
-<br><br>
-<h4><strong>Other Resources</strong></h4>
-<p><a href="resources/data8/tvd-walkthrough.html">Total Variation Distance – A Walkthrough</a></p>
-<p><a href="resources/data8/ch2-causation.pdf">Causality Notes [Vasilis]</a></p>
-
+<br>
+Right now, I have nothing to share here. Soon...
 
 </div></div>
       <script></script>
