--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
       
       <div id="titlearea">
         <h2>Suraj Rampure</h2>
-        <h4><strong><a href="index.html">Home</a></strong>&nbsp;&nbsp;&nbsp;&nbsp;<a href="data8.html">Teaching</a></h4>
+        <h4><strong><a href="index.html">Home</a></strong>&nbsp;&nbsp;&nbsp;&nbsp;<a href="cs61a.html">CS 61A</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="data8.html">Data 8</a></h4>
       </div>
       <br><img src="resources/me.png" alt="circle.png" height="500px" width="500px">
 
       </p>
 <p>Hi there! I’m a second year Electrical Engineering and Computer Science undergraduate at UC Berkeley<br> by way of Windsor, Ontario, a small Canadian city that sits on the Detroit River.<br><br><br>
-<strong>In Fall 2017, I am...</strong></p>
+<strong>In Spring 2018, I am...</strong></p>
 <ul>
-<li>an <strong>Undergraduate Student Instructor (uGSI)</strong> for <a href="http://data8.org">Data 8</a>, Berkeley’s introductory data science course
+<li>an <strong>Undergraduate Student Instructor (uGSI)</strong> for <a href="http://cs61a.org">CS 61A</a>, Berkeley’s introductory computer science course
 <ul>
-<li>I'm responsible for a lab of 30 students, holding office hours, and helping create content (exams, assignments, supplementary material)</li>
-<li>Access my Data 8 page <a href="data8.html">here</a></li></ul>
+<li>This semester, I will be focusing on improving the office hours experience for students, amongst other things</li>
+<li>Access my CS 61A page <a href="cs61a.html"><strong>here</strong></a></li></ul>
 </li>
 <br>
 
@@ -62,11 +62,10 @@
 </ul>
 </li>
 <br>
-<li>taking the following courses:
+<li>taking the following EECS and math courses:
 <ul>
-<li>CS 170, <strong>Efficient Algorithms</strong>, with P. Raghavendra</li>
-<li>EECS 126, <strong>Probability and Random Processes</strong>, with A. Parekh and J. Walrand</li>
-<li>Engineering 120, <strong>Engineering Economics</strong>, with E. Friedman</li>
+<li>CS 174, <strong>Randomized Algorithms and Discrete Probability</strong>, with E. Friedman</li>
+<li>CS 189, <strong>Machine Learning</strong>, with A. Sahai and J. Listgarden</li>
 </ul>
 <br>
 <br>
@@ -77,17 +76,10 @@
 <p><strong>Previously, I...</strong></p>
 
 <ul>
-<li>was a <strong>tutor</strong> for Data 8</li>
+<li>was an <strong>Undergraduate Student Instructor</strong> for <a href="http://data8.org">Data 8</a>, Berkeley's introductory data science course</li>
 <ul>
-<li>I helped create tutoring worksheets, staff office hours, and taught small groups of students in tutoring sections</li>
+<li>Access my Data 8 materials <a href="data8.html"><strong>here</strong></a> </li>
 </ul>
-
-<br>
-
-<li>was a <strong>Junior Mentor</strong> for Computer Science Mentors</li>
-  <ul>
-  <li>I taught and reviewed CS 70 concepts with two sections of six students each week</li>
-  </ul>
 
 <br>
 
@@ -100,6 +92,9 @@
   <li>Math 128A, <strong>Numerical Analysis</strong>, with M. Gu (Spring 2017)</li>
   <li>EE 16A, <strong>Designing Information Devices</strong>, with B. Ayazifar and V. Stojanovic (Spring 2017)</li>
   <li>Math 53, <strong>Multivariable Calculus</strong>, with M. Hutchings (Summer 2017)</li>
+  <li>CS 170, <strong>Efficient Algorithms</strong>, with P. Raghavendra (Fall 2017)</li>
+  <li>EECS 126, <strong>Probability and Random Processes</strong>, with A. Parekh and J. Walrand (Fall 2017)</li>
+  <li>Engineering 120, <strong>Engineering Economics</strong>, with E. Friedman (Fall 2017)</li>
 	</ul>
 </ul>
 </ul>
@@ -107,9 +102,6 @@
 <br>
 <br>
 
-<h3>Teaching</h3>
-<p> Click <a href="teaching.html"><strong>here</strong></a> to visit my teaching page.</p>
-<br>
 <h3>Connect with Me</h3>
 <p>If you'd like to check out some of my work, you can do so on my <a href="http://github.com/surajrampure">GitHub</a> profile.<br>You can also connect with me on <a href="http://linkedin.com/in/rampuresuraj"> LinkedIn</a>.</p>
 <p>My resume can be found <a href="resume.pdf">here</a>. <br>If you'd like to contact me, send me an e-mail at <a href="mailto:suraj.rampure@berkeley.edu">suraj.rampure@berkeley.edu</a>.</p>
