updated about, added 61a stuff

--- a/cs61a.html
+++ b/cs61a.html
@@ -39,14 +39,21 @@
       <div id="contentarea"><div class="cell markdown-cell"><h3><strong>CS 61A, Spring 2018</strong></h3>
 <p>
   <strong>Lab and Discussion:</strong>  N/A<br>
-  <strong>Office Hours:</strong> TBD
+  <strong>Office Hours:</strong> W/Th 6:30-8, 257 Cory Hall
   <br><br>
   You can always contact me via email at <strong>suraj.rampure@berkeley.edu</strong>.
   <br><br>
 </p>
 
-<br>
-Right now, I have nothing to share here. Soon...
+<h4><strong>Videos</strong></h4>
+<p> While teaching CS 61A, I've created several walkthrough and review videos. Take a look at them here: </p>
+<p><strong>Created in Spring 2018:</strong></p>
+<p><a href="https://www.youtube.com/playlist?list=PLx38hZJ5RLZeOlFXcB3uxwyAONB4PAMeX">Spring 2018 Midterm 1 Walkthrough</a></p>
+<p><a href="https://www.youtube.com/playlist?list=PLx38hZJ5RLZcKnjvoIPAEE_tlu1Uzqs0W">Fall 2017 Final Walkthrough</a></p>
+
+<br><br>
+<h4><strong>Other Resources</strong></h4>
+<p><a href="resources/cs61a/towers_of_hanoi.pdf">Towers of Hanoi Animation</a></p>
 
 </div></div>
       <script></script>
