--- a/index.html
+++ b/index.html
@@ -43,22 +43,19 @@
 </li>
 <br>
 
+<li>working on creating <strong><a href="http://imt-decal.org">Introduction to Mathematical Thinking</a></strong>, a course designed to provide students with mathematical maturity before taking CS 70
+<ul>
+<li>Pending approval, I will be instructing the course in Fall 2018</li>
+<li>The textbook being written for the course can be found <a href="http://book.imt-decal.org">here</a></li>
+</ul>
+</li>
+
+<br>
 
 <li>a <strong>Co-coordinator and Senior Mentor</strong> for <a href="https://csmberkeley.github.io">Computer Science Mentors</a>' offering of <a href="http://eecs70.org">CS 70</a>, Berkeley's lower-division discrete math and probability course that is a pre-requisite to declare the CS major
 <ul>
 <li>I'm one of two people responsible for ensuring that CS 70 tutoring runs smoothly through CSM, by making sure worksheets are up to date and that tutors are informed the best teaching practices</li>
 <li>I also teach a section of six students for 1.5h a week as a Senior Mentor</li>
-</ul>
-</li>
-<br>
-
-<li>a <strong>hackathon director</strong> for <a href="http://calhacks.io"> Cal Hacks</a>, UC Berkeley's premier annual hackathon
-</li>
-<br>
-
-<li>the <strong>Director of Curriculum Development</strong> of <a href="http://datascienceforindia.com"> Data Science for India</a>, a brand-new organization with the goal of spreading the data science movement to high schools in India
-<ul>
-<li>So far, numerous volunteers have taught over five hundred students with the Jupyter notebooks and worksheets created from scratch through DSI</li>
 </ul>
 </li>
 <br>
@@ -80,6 +77,19 @@
 <ul>
 <li>Access my Data 8 materials <a href="data8.html"><strong>here</strong></a> </li>
 </ul>
+
+<br>
+
+<li>was a <strong>hackathon director</strong> for <a href="http://calhacks.io"> Cal Hacks</a>, UC Berkeley's premier annual hackathon
+</li>
+
+<br>
+
+<li>was the <strong>Director of Curriculum Development</strong> of <a href="http://datascienceforindia.com"> Data Science for India</a>, a brand-new organization with the goal of spreading the data science movement to high schools in India
+<ul>
+<li>So far, numerous volunteers have taught over five hundred students with the Jupyter notebooks and worksheets created from scratch through DSI</li>
+</ul>
+</li>
 
 <br>
 
