--- a/cs61a.html
+++ b/cs61a.html
@@ -48,6 +48,7 @@
 <h4><strong>Videos</strong></h4>
 <p> While teaching CS 61A, I've created several walkthrough and review videos. Take a look at them here: </p>
 <p><strong>Created in Spring 2018:</strong></p>
+<p><a href="https://www.youtube.com/playlist?list=PLx38hZJ5RLZcnCCRrb_pYP8Kkj7LD3kcZ">Spring 2018 Midterm 2 Walkthrough</a></p>
 <p><a href="https://www.youtube.com/playlist?list=PLx38hZJ5RLZeOlFXcB3uxwyAONB4PAMeX">Spring 2018 Midterm 1 Walkthrough</a></p>
 <p><a href="https://www.youtube.com/playlist?list=PLx38hZJ5RLZcKnjvoIPAEE_tlu1Uzqs0W">Fall 2017 Final Walkthrough</a></p>
 
