--- a/2-teaching.html
+++ b/2-teaching.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="resources/air.css">
+  <link rel="stylesheet" href="surajrampure.com/resources/air.css">
   <script type='text/x-mathjax-config'>MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$']]}});</script>
   <script type='text/javascript' src='http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
   <style>
@@ -447,7 +447,10 @@
       <ul>
 <li><a class="" href="index.html">index</a></li>
 <li><a class="active" href="2-teaching.html">teaching</a></li>
-<li><a class="" href="3-coursework.html">coursework</a></li>
+<li class="heading"><span>posts</span></li>
+<ul>
+<li><a class="" href="posts/1-Undergraduate Teaching Community in EECS.html">Undergraduate Teaching Community in EECS</a></li>
+</ul>
 </ul>
     </nav>
     <article id="main" class="content">
