--- a/index.html
+++ b/index.html
@@ -447,10 +447,6 @@
       <ul>
 <li><a class="active" href="index.html">index</a></li>
 <li><a class="" href="2-teaching.html">teaching</a></li>
-<li class="heading"><span>posts</span></li>
-<ul>
-<li><a class="" href="posts/1-Undergraduate Teaching Community in EECS.html">Undergraduate Teaching Community in EECS</a></li>
-</ul>
 </ul>
     </nav>
     <article id="main" class="content">
@@ -463,7 +459,7 @@
         <p><i>New York, New York, USA (2018)</i></p>
     </div>
 </div>
-<p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
+<br>
 <p>My name is Suraj Rampure, and I’m a junior studying Electrical Engineering and Computer Science at the University of California, Berkeley. I’m from Windsor, Ontario, a small Canadian town that’s ten minutes south of Detroit and three hours south of Toronto. I like dogs (shout out to Rex and Junior), cars, technology (Apple) and rooting for whatever team LeBron plays for (go <del>Cavs</del> Lakers!).</p>
 <p>If you have any questions, feel free to reach out at <a href="mailto:suraj.rampure@berkeley.edu">suraj.rampure@berkeley.edu</a>. You can also connect with me on <a href="http://linkedin.com/in/rampuresuraj">LinkedIn</a>, check out my <a href="http://github.com/surajrampure">GitHub</a> or take a look at my <a href="resume.pdf">resume</a>.</p>
 <br>
@@ -471,7 +467,7 @@
 <p>Teaching consumes a large part of my day, but I wouldn’t have it any other way.</p>
 <ul>
 <li>
-<p>Fall 2018 is my third semester as an <strong>Undergraduate Student Instructor</strong>, i.e. Teaching Assistant, in the EECS department at UC Berkeley. I’m currently a TA for ???, but have also TA’d Data 8 (introductory data science) and CS 61A (introductory programming) in the past. Check out my teaching page [here](link to teaching page). I was a recipient of the <a href="http://gsi.berkeley.edu/programs-services/award-programs/ogsi/ogsi-2018/">outstanding GSI award</a> for the 2017-2018 year, an award that is given annually to the top ~9% of GSIs in each department.</p>
+<p>Fall 2018 is my third semester as an <strong>Undergraduate Student Instructor</strong>, i.e. Teaching Assistant, in the EECS department at UC Berkeley. I’m currently a TA for Data 100, but have also TA’d Data 8 (introductory data science) and CS 61A (introductory programming) in the past. Check out my teaching page [here](link to teaching page). I was a recipient of the <a href="http://gsi.berkeley.edu/programs-services/award-programs/ogsi/ogsi-2018/">outstanding GSI award</a> for the 2017-2018 year, an award that is given annually to the top ~9% of GSIs in each department.</p>
 </li>
 <li>
 <p>The Fall 2018 semester is also the inaugural semester of <strong><a href="http://imt-decal.org">Introduction to Mathematical Thinking</a></strong>, a 2-unit student-run course that I created in order to prepare students for our extremely challenging introductory discrete math and probability course that students need to do well in in order to declare the Computer Science major. You can read the textbook I wrote for it <a href="http://book.imt-decal.org">here</a>.</p>
@@ -484,7 +480,7 @@
 <h3>Other</h3>
 <ul>
 <li>
-<p>In the summer of 2018, I was a software engineering intern at <strong><a href="mckinsey.com">McKinsey &amp; Co.</a></strong> in New York City, where I worked on the Healthcare Analytics and Delivery team. My work was primarily in Python, SQL and JavaScript.</p>
+<p>In the summer of 2018, I was a software engineering intern at <strong><a href="mckinsey.com">McKinsey &amp; Co.</a></strong> in New York City, where I worked on the Healthcare Analytics and Delivery team. My work was primarily in SQL and JavaScript.</p>
 </li>
 <li>
 <p>Previously, I was a director for <strong><a href="http://calhacks.io">Cal Hacks</a></strong>, Berkeley’s largest annual hackathon.</p>
