--- a/2-teaching.html
+++ b/2-teaching.html
@@ -447,10 +447,6 @@
       <ul>
 <li><a class="" href="index.html">index</a></li>
 <li><a class="active" href="2-teaching.html">teaching</a></li>
-<li class="heading"><span>posts</span></li>
-<ul>
-<li><a class="" href="posts/1-Undergraduate Teaching Community in EECS.html">Undergraduate Teaching Community in EECS</a></li>
-</ul>
 </ul>
     </nav>
     <article id="main" class="content">
@@ -464,9 +460,13 @@
         <p><i>Yosemite, California, USA (2017)</i></p>
     </div>
 </div>
-<p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
+<br>
 <h2>Introduction to Mathematical Thinking DeCal</h2>
 <p>All resources, including the course textbook (which features embedded lecture videos) are on the course website, <a href="http://imt-decal.org">http://imt-decal.org</a>.</p>
+<br>
+<h2>Data 100</h2>
+<p>TA: Fall 2018</p>
+<p>Coming soon…</p>
 <br>
 <h2>CS 61A</h2>
 <p>TA: Spring 2018</p>
