--- a/2-teaching.html
+++ b/2-teaching.html
@@ -466,7 +466,7 @@
 <br>
 <h2>Data 100</h2>
 <p>TA: Fall 2018</p>
-<p>Coming soon…</p>
+<p>Lab 121: Monday 4-5PM, Evans B6<br>Discussion 123A: Wednesday 4-5PM, LeConte 385<br><br>Lab 125: Monday 5-6PM, Evans B6<br>Discussion 125A: Wednesday 5-6PM, Evans 9</p>
 <br>
 <h2>CS 61A</h2>
 <p>TA: Spring 2018</p>
