--- a/2-teaching.html
+++ b/2-teaching.html
@@ -467,8 +467,10 @@
 <h2>Data 100</h2>
 <p>TA: Fall 2018</p>
 <p>Lab 121: Monday 4-5PM, Evans B6<br>Discussion 123A: Wednesday 4-5PM, LeConte 385<br><br>Lab 125: Monday 5-6PM, Evans B6<br>Discussion 125A: Wednesday 5-6PM, Evans 9</p>
+<p>Office Hours: Thursday 3-5PM, Evans 342</p>
 <ul>
-<li>Discussion notes, Week 5 (<a href="resources/ds100/disc05.pdf">pdf</a>)
+<li>Discussion notes, Week 5 (<a href="resources/ds100/disc05.pdf">pdf</a>)</li>
+<li>Discussion notes, Week 6 (<a href="resources/ds100/disc06.pdf">pdf</a>)</li>
 </ul>
 <br>
 <h2>CS 61A</h2>
