--- a/2-teaching.html
+++ b/2-teaching.html
@@ -471,6 +471,7 @@
 <ul>
 <li>Discussion notes, Week 5 (<a href="resources/ds100/disc05.pdf">pdf</a>)</li>
 <li>Discussion notes, Week 6 (<a href="resources/ds100/disc06.pdf">pdf</a>)</li>
+<li>Discussion notes, Week 7 (<a href="resources/ds100/disc07.pdf">pdf</a>)</li>
 </ul>
 <br>
 <h2>CS 61A</h2>
