linear regression ds100

--- a/2-teaching.html
+++ b/2-teaching.html
@@ -473,6 +473,19 @@
 <li>Discussion notes, Week 6 (<a href="resources/ds100/disc06.pdf">pdf</a>)</li>
 <li>Discussion notes, Week 7 (<a href="resources/ds100/disc07.pdf">pdf</a>)</li>
 </ul>
+
+Videos I've created:
+<ul>
+<li><a href="https://www.youtube.com/playlist?list=PLQCcNQgUcDfqAD1D9g9P9SUYo0tdXQpSY">Fall 2017 Midterm Walkthrough</a> (<a href="resources/ds100/fall17markup.pdf">here</a> is the marked up exam)</li>
+</ul>
+
+Other resources I've created:
+<ul>
+<li><a href="resources/ds100/regression-connections.html">Linear Regression Connections</a></li>
+</ul>
+
+
+
 <br>
 <h2>CS 61A</h2>
 <p>TA: Spring 2018</p>
