--- a/2-teaching.html
+++ b/2-teaching.html
@@ -472,6 +472,7 @@
 <li>Discussion notes, Week 5 (<a href="resources/ds100/disc05.pdf">pdf</a>)</li>
 <li>Discussion notes, Week 6 (<a href="resources/ds100/disc06.pdf">pdf</a>)</li>
 <li>Discussion notes, Week 7 (<a href="resources/ds100/disc07.pdf">pdf</a>)</li>
+<li>Discussion notes, Week 8 (<a href="resources/ds100/disc08.pdf">pdf</a>)</li>
 </ul>
 
 Videos I've created:
