disc review slides

--- a/2-teaching.html
+++ b/2-teaching.html
@@ -482,6 +482,8 @@ Videos I've created:
 
 Other resources I've created:
 <ul>
+<li><a href="resources/ds100/linear-regression.pdf">Review Slides on Linear Regression, Regularization, and B-V</a></li>
+<li><a href="resources/ds100/classification.pdf">Review Slides on Classification, Logistic Regression, and Probability</a></li>
 <li><a href="resources/ds100/regression-connections.html">Linear Regression Connections</a></li>
 </ul>
 
