--- a/teaching/index.html
+++ b/teaching/index.html
@@ -28,36 +28,34 @@ Teaching – Suraj Rampure
 <h1 id="teaching-suraj-rampure">Teaching – Suraj Rampure</h1>
 <p><a href="index.html">Homepage</a></p>
 <hr />
-<p><br></p>
-<h2 id="introduction-to-mathematical-thinking-decal">Introduction to Mathematical Thinking DeCal</h2>
-<p>All resources, including the course textbook (which features embedded lecture videos) are on the course website, <a href="http://imt-decal.org" class="uri">http://imt-decal.org</a>.</p>
-<p><br></p>
-<h2 id="data-100">Data 100</h2>
+<h3 id="cs-198-087-introduction-to-mathematical-thinking-decal-site">CS 198-087 – Introduction to Mathematical Thinking DeCal (<a href="http://imt-decal.org">site</a>)</h3>
+<p>All resources, including the <a href="http://book.imt-decal.org">course textbook</a> are on the course website, linked above.</p>
+<hr />
+<h3 id="data-100-principles-and-techniques-of-data-science-site">Data 100 – Principles and Techniques of Data Science (<a href="http://ds100.org">site</a>)</h3>
 <p>TA: Spring 2019, Fall 2018</p>
-<p>Discussions from Fall 2018:</p>
+<p>Section and OH times TBA</p>
+<p><strong>Discussions (from Fall 2018):</strong></p>
 <ul>
 <li>Discussion notes, Week 5 (<a href="resources/ds100/disc05.pdf">pdf</a>)</li>
 <li>Discussion notes, Week 6 (<a href="resources/ds100/disc06.pdf">pdf</a>)</li>
 <li>Discussion notes, Week 7 (<a href="resources/ds100/disc07.pdf">pdf</a>)</li>
 <li>Discussion notes, Week 8 (<a href="resources/ds100/disc08.pdf">pdf</a>)</li>
 </ul>
-<p>Videos I’ve created:</p>
+<p><strong>Videos:</strong></p>
 <ul>
 <li><a href="https://www.youtube.com/playlist?list=PLQCcNQgUcDfqAD1D9g9P9SUYo0tdXQpSY">Fall 2017 Midterm Walkthrough</a> (FA18)</li>
 <li><a href="https://www.youtube.com/watch?v=5JU0Xe46DnA&amp;list=PLQCcNQgUcDfrBO7dpL-Pv6e0LYGeqsHKr">Spring 2018 Final Walkthrough</a> (FA18)</li>
 </ul>
-<p>Other resources I’ve created:</p>
+<p><strong>Notes and other resources</strong>:</p>
 <ul>
-<li><a href="resources/ds100/linear-regression.pdf">Review slides on Linear Regression, Regularization, and Bias-Variance</a></li>
-<li><a href="resources/ds100/classification.pdf">Review Slides on Classification, Logistic Regression, and Probability</a></li>
-<li><a href="resources/ds100/regression-connections.html">Connections between different approaches to linear regression</a></li>
+<li><a href="resources/ds100/linear-regression.pdf">Review slides on Linear Regression, Regularization, and Bias-Variance</a> (FA18)</li>
+<li><a href="resources/ds100/classification.pdf">Review Slides on Classification, Logistic Regression, and Probability</a> (FA18)</li>
+<li><a href="resources/ds100/regression-connections.html">Connections between different approaches to linear regression</a> (FA18)</li>
 </ul>
-<p><br></p>
-<h2 id="cs-61a">CS 61A</h2>
+<hr />
+<h3 id="cs-61a-structure-and-interpretation-of-computer-programs-site">CS 61A – Structure and Interpretation of Computer Programs (<a href="http://cs61a.org">site</a>)</h3>
 <p>TA: Spring 2018</p>
-<p>
-While I didn’t teach a discussion section this semester, I created a few walkthrough videos:
-</p>
+<p><strong>Videos:</strong></p>
 <ul>
 <li>
 <a href="https://www.youtube.com/playlist?list=PLx38hZJ5RLZcnCCRrb_pYP8Kkj7LD3kcZ">Spring 2018 Midterm 2 Walkthrough</a> (SP18)
@@ -69,16 +67,12 @@ While I didn’t teach a discussion section this semester, I created a few walkt
 <a href="https://www.youtube.com/playlist?list=PLx38hZJ5RLZcKnjvoIPAEE_tlu1Uzqs0W">Fall 2017 Final Walkthrough</a> (SP18)
 </li>
 </ul>
-<br>
-<h2>
-Data 8
-</h2>
+<hr />
+<h3 id="data-8-foundations-of-data-science-site">Data 8 – Foundations of Data Science (<a href="http://data8.org">site</a>)</h3>
 <p>
 TA: Fall 2017, Tutor: Spring 2017
 </p>
-<p>
-Here are the discussion slides that I created in FA17. Feel free to use and modify these slides, but please give me credit.
-</p>
+<p><strong>Slides (from Fall 2017):</strong></p>
 <ul>
 <li>
 Week 1 <a href="resources/data8/pdf/week1.pdf">pdf</a> <a href="resources/data8/key/week1.key">keynote</a>
@@ -117,10 +111,7 @@ Week 11 <a href="resources/data8/pdf/week11.pdf">pdf</a> <a href="resources/data
 Week 12 <a href="resources/data8/pdf/week12.pdf">pdf</a> <a href="resources/data8/key/week12.key">keynote</a>
 </li>
 </ul>
-<br>
-<p>
-While teaching Data 8, I also created several review and walkthrough videos.
-</p>
+<p><strong>Videos:</strong></p>
 <ul>
 <li>
 <a href="https://www.youtube.com/watch?v=7P6zJmMV7AE">Histograms Midterm Review</a> (FA17)
@@ -141,9 +132,7 @@ While teaching Data 8, I also created several review and walkthrough videos.
 <a href="https://www.youtube.com/watch?v=oaNolUkZTL0">Spring 2016 Final Walkthrough</a> (SP17)
 </li>
 </ul>
-<p>
-Other resources:
-</p>
+<p><strong>Notes and other resources:</strong></p>
 <ul>
 <li>
 <a href="resources/data8/tvd-walkthrough.html">Total Variation Distance – A Walkthrough</a> (FA17)
