--- a/teaching/index.html
+++ b/teaching/index.html
@@ -26,7 +26,7 @@ Teaching – Suraj Rampure
 <script type='text/javascript' src='http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
 </head>
 <h1 id="teaching-suraj-rampure">Teaching – Suraj Rampure</h1>
-<p><a href="http://surajrampure.com">Home</a>   <strong><a href="http://surajrampure.com/teaching.html">Teaching</a></strong></p>
+<p><a href="../index.html">Home</a>   <strong><a href="index.html">Teaching</a></strong></p>
 <hr />
 <h3 id="cs-198-087-introduction-to-mathematical-thinking-decal-site">CS 198-087 – Introduction to Mathematical Thinking DeCal (<a href="http://imt-decal.org">site</a>)</h3>
 <p>All resources, including the <a href="http://book.imt-decal.org">course textbook</a> are on the course website, linked above.</p>
