--- a/teaching/index.html
+++ b/teaching/index.html
@@ -143,5 +143,5 @@ Week 12 <a href="resources/data8/pdf/week12.pdf">pdf</a> <a href="resources/data
 </ul>
 <br>
 <p>
-<img src="resources/pictures/d8logo.png" width=100> <br> <em>I also created this logo!</em>
+<img src="../resources/pictures/d8logo.png" width=100> <br> <em>I also created this logo!</em>
 </p>
