--- a/teaching/index.html
+++ b/teaching/index.html
@@ -36,10 +36,10 @@ Teaching – Suraj Rampure
 <p>Section and OH times TBA</p>
 <p><strong>Discussions (from Fall 2018):</strong></p>
 <ul>
-<li>Discussion notes, Week 5 (<a href="resources/ds100/disc05.pdf">pdf</a>)</li>
-<li>Discussion notes, Week 6 (<a href="resources/ds100/disc06.pdf">pdf</a>)</li>
-<li>Discussion notes, Week 7 (<a href="resources/ds100/disc07.pdf">pdf</a>)</li>
-<li>Discussion notes, Week 8 (<a href="resources/ds100/disc08.pdf">pdf</a>)</li>
+<li>Discussion notes, Week 5 (<a href="../resources/ds100/disc05.pdf">pdf</a>)</li>
+<li>Discussion notes, Week 6 (<a href="../resources/ds100/disc06.pdf">pdf</a>)</li>
+<li>Discussion notes, Week 7 (<a href="../resources/ds100/disc07.pdf">pdf</a>)</li>
+<li>Discussion notes, Week 8 (<a href="../resources/ds100/disc08.pdf">pdf</a>)</li>
 </ul>
 <p><strong>Videos:</strong></p>
 <ul>
@@ -48,9 +48,9 @@ Teaching – Suraj Rampure
 </ul>
 <p><strong>Notes and other resources</strong>:</p>
 <ul>
-<li><a href="resources/ds100/linear-regression.pdf">Review slides on Linear Regression, Regularization, and Bias-Variance</a> (FA18)</li>
-<li><a href="resources/ds100/classification.pdf">Review Slides on Classification, Logistic Regression, and Probability</a> (FA18)</li>
-<li><a href="resources/ds100/regression-connections.html">Connections between different approaches to linear regression</a> (FA18)</li>
+<li><a href="../resources/ds100/linear-regression.pdf">Review slides on Linear Regression, Regularization, and Bias-Variance</a> (FA18)</li>
+<li><a href="../resources/ds100/classification.pdf">Review Slides on Classification, Logistic Regression, and Probability</a> (FA18)</li>
+<li><a href="../resources/ds100/regression-connections.html">Connections between different approaches to linear regression</a> (FA18)</li>
 </ul>
 <hr />
 <h3 id="cs-61a-structure-and-interpretation-of-computer-programs-site">CS 61A – Structure and Interpretation of Computer Programs (<a href="http://cs61a.org">site</a>)</h3>
@@ -75,40 +75,40 @@ TA: Fall 2017, Tutor: Spring 2017
 <p><strong>Slides (from Fall 2017):</strong></p>
 <ul>
 <li>
-Week 1 <a href="resources/data8/pdf/week1.pdf">pdf</a> <a href="resources/data8/key/week1.key">keynote</a>
+Week 1 <a href="../resources/data8/pdf/week1.pdf">pdf</a> <a href="../resources/data8/key/week1.key">keynote</a>
 </li>
 <li>
-Week 2 <a href="resources/data8/pdf/week2.pdf">pdf</a> <a href="resources/data8/key/week2.key">keynote</a>
+Week 2 <a href="../resources/data8/pdf/week2.pdf">pdf</a> <a href="../resources/data8/key/week2.key">keynote</a>
 </li>
 <li>
-Week 3 <a href="resources/data8/pdf/week3.pdf">pdf</a> <a href="resources/data8/key/week3.key">keynote</a>
+Week 3 <a href="../resources/data8/pdf/week3.pdf">pdf</a> <a href="../resources/data8/key/week3.key">keynote</a>
 </li>
 <li>
-Week 4 <a href="resources/data8/pdf/week4.pdf">pdf</a> <a href="resources/data8/key/week4.key">keynote</a>
+Week 4 <a href="../resources/data8/pdf/week4.pdf">pdf</a> <a href="../resources/data8/key/week4.key">keynote</a>
 </li>
 <li>
-Week 5 <a href="resources/data8/pdf/week5.pdf">pdf</a> <a href="resources/data8/key/week5.key">keynote</a>
+Week 5 <a href="../resources/data8/pdf/week5.pdf">pdf</a> <a href="../resources/data8/key/week5.key">keynote</a>
 </li>
 <li>
-Week 6 <a href="resources/data8/pdf/week6.pdf">pdf</a> <a href="resources/data8/key/week6.key">keynote</a>
+Week 6 <a href="../resources/data8/pdf/week6.pdf">pdf</a> <a href="../resources/data8/key/week6.key">keynote</a>
 </li>
 <li>
 Week 7 (no slides)
 </li>
 <li>
-Week 8 <a href="resources/data8/pdf/week8.pdf">pdf</a> <a href="resources/data8/key/week8.key">keynote</a>
+Week 8 <a href="../resources/data8/pdf/week8.pdf">pdf</a> <a href="../resources/data8/key/week8.key">keynote</a>
 </li>
 <li>
-Week 9 <a href="resources/data8/pdf/week9.pdf">pdf</a> <a href="resources/data8/key/week9.key">keynote</a>
+Week 9 <a href="../resources/data8/pdf/week9.pdf">pdf</a> <a href="../resources/data8/key/week9.key">keynote</a>
 </li>
 <li>
-Week 10 <a href="resources/data8/pdf/week10.pdf">pdf</a> <a href="resources/data8/key/week10.key">keynote</a>
+Week 10 <a href="../resources/data8/pdf/week10.pdf">pdf</a> <a href="../resources/data8/key/week10.key">keynote</a>
 </li>
 <li>
-Week 11 <a href="resources/data8/pdf/week11.pdf">pdf</a> <a href="resources/data8/key/week11.key">keynote</a>
+Week 11 <a href="../resources/data8/pdf/week11.pdf">pdf</a> <a href="../resources/data8/key/week11.key">keynote</a>
 </li>
 <li>
-Week 12 <a href="resources/data8/pdf/week12.pdf">pdf</a> <a href="resources/data8/key/week12.key">keynote</a>
+Week 12 <a href="../resources/data8/pdf/week12.pdf">pdf</a> <a href="../resources/data8/key/week12.key">keynote</a>
 </li>
 </ul>
 <p><strong>Videos:</strong></p>
@@ -135,10 +135,10 @@ Week 12 <a href="resources/data8/pdf/week12.pdf">pdf</a> <a href="resources/data
 <p><strong>Notes and other resources:</strong></p>
 <ul>
 <li>
-<a href="resources/data8/tvd-walkthrough.html">Total Variation Distance – A Walkthrough</a> (FA17)
+<a href="../resources/data8/tvd-walkthrough.html">Total Variation Distance – A Walkthrough</a> (FA17)
 </li>
 <li>
-<a href="resources/data8/ch2-causation.pdf">Causality Notes (Vasilis)</a> (SP17)
+<a href="../resources/data8/ch2-causation.pdf">Causality Notes (Vasilis)</a> (SP17)
 </li>
 </ul>
 <br>
