--- a/teaching/index.html
+++ b/teaching/index.html
@@ -33,7 +33,9 @@ Teaching – Suraj Rampure
 <hr />
 <h3 id="data-100-principles-and-techniques-of-data-science-site">Data 100 – Principles and Techniques of Data Science (<a href="http://ds100.org">site</a>)</h3>
 <p>TA: Spring 2019, Fall 2018</p>
-<p>Section and OH times TBA</p>
+<p>Lab: Tuesday, 12-1PM and 1-2PM, Evans B6 (111 and 115)</p>
+<p>Discussion: Friday, 12-1PM and 1-2PM, Etcheverry (108 and 113)</p>
+<p>OH: Thursday, 12-2PM, Soda 411</p>
 <p><strong>Discussions (from Fall 2018):</strong></p>
 <ul>
 <li>Discussion notes, Week 5 (<a href="../resources/ds100/disc05.pdf">pdf</a>)</li>
