--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Suraj Rampure
 <script type='text/javascript' src='http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
 </head>
 <h1 id="suraj-rampure">Suraj Rampure</h1>
-<p><strong><a href="index.html">Home</a></strong>   <a href="teaching/index.html">Teaching</a></p>
+<p><strong><a href="index.html">Home</a></strong>   <a href="teaching/index.html">Teaching</a>   <a href="courses/index.html">Courses</a></p>
 <hr />
 <p>You can email me at <strong>suraj.rampure@berkeley.edu</strong>, connect with me on <a href="http://linkedin.com/in/rampuresuraj">LinkedIn</a>, check out my <a href="http://github.com/surajrampure">GitHub</a>, or look at my <a href="resume.pdf">resume</a>.</p>
 <hr />
