--- a/courses/index.html
+++ b/courses/index.html
@@ -25,128 +25,40 @@ Teaching – Suraj Rampure
 <script type='text/x-mathjax-config'>MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$']]}});</script>
 <script type='text/javascript' src='http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
 </head>
-<h1 id="teaching-suraj-rampure">Teaching – Suraj Rampure</h1>
-<p><a href="../index.html">Home</a>   <strong><a href="index.html">Teaching</a></strong>   <a href="../courses/index.html">Courses</a></p>
+<h1 id="courses-suraj-rampure">Courses – Suraj Rampure</h1>
+<p><a href="../index.html">Home</a>   <a href="../teaching/index.html">Teaching</a>   <strong><a href="index.html">Courses</a></strong></p>
 <hr />
-<h3 id="cs-198-087-introduction-to-mathematical-thinking-decal-site">CS 198-087 – Introduction to Mathematical Thinking DeCal (<a href="http://imt-decal.org">site</a>)</h3>
-<p>All resources, including the <a href="http://book.imt-decal.org">course textbook</a> are on the course website, linked above.</p>
-<hr />
-<h3 id="data-100-principles-and-techniques-of-data-science-site">Data 100 – Principles and Techniques of Data Science (<a href="http://ds100.org">site</a>)</h3>
-<p>TA: Spring 2019, Fall 2018</p>
+<h3 id="computer-science">Computer Science</h3>
 <ul>
-<li>Lab: Tuesday, 12-1PM and 1-2PM, Evans B6 (111 and 115)</li>
-<li>Discussion: Friday, 12-1PM and 1-2PM, Etcheverry (108 and 113)</li>
-<li>OH: Thursday, 12-2PM, Soda 411</li>
+<li>W186: Databases (Spring 2019, in progress)</li>
+<li>189: Machine Learning (Spring 2018)</li>
+<li>174: Random Algorithms and Discrete Probability (Spring 2018)</li>
+<li>170: Efficient Algorithms and Intractable Problems (Fall 2017)</li>
+<li>61B: Data Structures (Spring 2017)</li>
+<li>195: Social Implications of Computing (Fall 2016)</li>
+<li>70: Discrete Mathematics and Probability Theory (Fall 2016)</li>
+<li>61A: Structure and Interpretation of Computer Programs (Fall 2016)</li>
 </ul>
-<p>Fill out <a href="http://tinyurl.com/goatjames">this form</a> to tell me a bit about yourself!</p>
-<p><strong>Discussions (from Fall 2018):</strong></p>
+<h3 id="electrical-engineering">Electrical Engineering</h3>
 <ul>
-<li>Discussion notes, Week 5 (<a href="../resources/ds100/disc05.pdf">pdf</a>)</li>
-<li>Discussion notes, Week 6 (<a href="../resources/ds100/disc06.pdf">pdf</a>)</li>
-<li>Discussion notes, Week 7 (<a href="../resources/ds100/disc07.pdf">pdf</a>)</li>
-<li>Discussion notes, Week 8 (<a href="../resources/ds100/disc08.pdf">pdf</a>)</li>
+<li>120: Signals and Systems (Spring 2019, in progress)</li>
+<li>229A: Information Theory (Fall 2018)</li>
+<li>16B: Designing Information Systems and Devices II (Fall 2018)</li>
+<li>126: Probability and Random Processes (Fall 2017)</li>
+<li>16A: Designing Information Systems and Devices I (Spring 2017)</li>
 </ul>
-<p><strong>Videos:</strong></p>
+<h3 id="mathematics">Mathematics</h3>
 <ul>
-<li><a href="https://www.youtube.com/playlist?list=PLQCcNQgUcDfqAD1D9g9P9SUYo0tdXQpSY">Fall 2017 Midterm Walkthrough</a> (FA18)</li>
-<li><a href="https://www.youtube.com/watch?v=5JU0Xe46DnA&amp;list=PLQCcNQgUcDfrBO7dpL-Pv6e0LYGeqsHKr">Spring 2018 Final Walkthrough</a> (FA18)</li>
+<li>113: Abstract Algebra (Spring 2019, in progress)</li>
+<li>53: Multivariable Calculus (Summer 2017)</li>
+<li>128A: Numerical Analysis (Spring 2017)</li>
+<li>110: Linear Algebra (Spring 2017)</li>
+<li>1A: Calculus I (Fall 2016)</li>
 </ul>
-<p><strong>Notes and other resources</strong>:</p>
+<h3 id="other-science-and-engineering">Other Science and Engineering</h3>
 <ul>
-<li><a href="../resources/ds100/linear-regression.pdf">Review slides on Linear Regression, Regularization, and Bias-Variance</a> (FA18)</li>
-<li><a href="../resources/ds100/classification.pdf">Review Slides on Classification, Logistic Regression, and Probability</a> (FA18)</li>
-<li><a href="../resources/ds100/regression-connections.html">Connections between different approaches to linear regression</a> (FA18)</li>
+<li>Physics 7B: Electricity and Magnetism (Fall 2018)</li>
+<li>Physics 7A: Kinematics and Dynamics (Spring 2018)</li>
+<li>Engineering 120: Engineering Economics (Fall 2017)</li>
+<li>Chemistry 1A/L: General Chemistry and Lab (Fall 2016)</li>
 </ul>
-<hr />
-<h3 id="cs-61a-structure-and-interpretation-of-computer-programs-site">CS 61A – Structure and Interpretation of Computer Programs (<a href="http://cs61a.org">site</a>)</h3>
-<p>TA: Spring 2018</p>
-<p><strong>Videos:</strong></p>
-<ul>
-<li>
-<a href="https://www.youtube.com/playlist?list=PLx38hZJ5RLZcnCCRrb_pYP8Kkj7LD3kcZ">Spring 2018 Midterm 2 Walkthrough</a> (SP18)
-</li>
-<li>
-<a href="https://www.youtube.com/playlist?list=PLx38hZJ5RLZeOlFXcB3uxwyAONB4PAMeX">Spring 2018 Midterm 1 Walkthrough</a> (SP18)
-</li>
-<li>
-<a href="https://www.youtube.com/playlist?list=PLx38hZJ5RLZcKnjvoIPAEE_tlu1Uzqs0W">Fall 2017 Final Walkthrough</a> (SP18)
-</li>
-</ul>
-<hr />
-<h3 id="data-8-foundations-of-data-science-site">Data 8 – Foundations of Data Science (<a href="http://data8.org">site</a>)</h3>
-<p>
-TA: Fall 2017, Tutor: Spring 2017
-</p>
-<p><strong>Slides (from Fall 2017):</strong></p>
-<ul>
-<li>
-Week 1 <a href="../resources/data8/pdf/week1.pdf">pdf</a> <a href="../resources/data8/key/week1.key">keynote</a>
-</li>
-<li>
-Week 2 <a href="../resources/data8/pdf/week2.pdf">pdf</a> <a href="../resources/data8/key/week2.key">keynote</a>
-</li>
-<li>
-Week 3 <a href="../resources/data8/pdf/week3.pdf">pdf</a> <a href="../resources/data8/key/week3.key">keynote</a>
-</li>
-<li>
-Week 4 <a href="../resources/data8/pdf/week4.pdf">pdf</a> <a href="../resources/data8/key/week4.key">keynote</a>
-</li>
-<li>
-Week 5 <a href="../resources/data8/pdf/week5.pdf">pdf</a> <a href="../resources/data8/key/week5.key">keynote</a>
-</li>
-<li>
-Week 6 <a href="../resources/data8/pdf/week6.pdf">pdf</a> <a href="../resources/data8/key/week6.key">keynote</a>
-</li>
-<li>
-Week 7 (no slides)
-</li>
-<li>
-Week 8 <a href="../resources/data8/pdf/week8.pdf">pdf</a> <a href="../resources/data8/key/week8.key">keynote</a>
-</li>
-<li>
-Week 9 <a href="../resources/data8/pdf/week9.pdf">pdf</a> <a href="../resources/data8/key/week9.key">keynote</a>
-</li>
-<li>
-Week 10 <a href="../resources/data8/pdf/week10.pdf">pdf</a> <a href="../resources/data8/key/week10.key">keynote</a>
-</li>
-<li>
-Week 11 <a href="../resources/data8/pdf/week11.pdf">pdf</a> <a href="../resources/data8/key/week11.key">keynote</a>
-</li>
-<li>
-Week 12 <a href="../resources/data8/pdf/week12.pdf">pdf</a> <a href="../resources/data8/key/week12.key">keynote</a>
-</li>
-</ul>
-<p><strong>Videos:</strong></p>
-<ul>
-<li>
-<a href="https://www.youtube.com/watch?v=7P6zJmMV7AE">Histograms Midterm Review</a> (FA17)
-</li>
-<li>
-<a href="https://www.youtube.com/watch?v=mdHvHv_lqLk">Summer 2017 Midterm Walkthrough</a> (FA17)
-</li>
-<li>
-<a href="https://www.youtube.com/watch?v=rZfGEibJ0Og&amp;feature=youtu.be">Spring 2017 Final Walkthrough</a> (FA17)
-</li>
-<li>
-<a href="https://www.youtube.com/watch?v=LPMzXlYf8n8">Spring 2017 Midterm Walkthrough</a> (SP17)
-</li>
-<li>
-<a href="https://www.youtube.com/watch?v=LR8Zfa1JovA">Fall 2016 Midterm Walkthrough</a> (SP17)
-</li>
-<li>
-<a href="https://www.youtube.com/watch?v=oaNolUkZTL0">Spring 2016 Final Walkthrough</a> (SP17)
-</li>
-</ul>
-<p><strong>Notes and other resources:</strong></p>
-<ul>
-<li>
-<a href="../resources/data8/tvd-walkthrough.html">Total Variation Distance – A Walkthrough</a> (FA17)
-</li>
-<li>
-<a href="../resources/data8/ch2-causation.pdf">Causality Notes (Vasilis)</a> (SP17)
-</li>
-</ul>
-<br>
-<p>
-<img src="../resources/pictures/d8logo.png" width=100> <br> <em>I also created this logo!</em>
-</p>
