--- a/teaching/index.html
+++ b/teaching/index.html
@@ -39,13 +39,20 @@ Teaching – Suraj Rampure
 <li>OH: Thursday, 12-2PM, Soda 411</li>
 </ul>
 <p>Fill out <a href="http://tinyurl.com/goatjames">this form</a> to tell me a bit about yourself!</p>
-<p><strong>Discussions (from Fall 2018):</strong></p>
-<ul>
-<li>Discussion notes, Week 5 (<a href="../resources/ds100/disc05.pdf">pdf</a>)</li>
-<li>Discussion notes, Week 6 (<a href="../resources/ds100/disc06.pdf">pdf</a>)</li>
-<li>Discussion notes, Week 7 (<a href="../resources/ds100/disc07.pdf">pdf</a>)</li>
-<li>Discussion notes, Week 8 (<a href="../resources/ds100/disc08.pdf">pdf</a>)</li>
-</ul>
+<table>
+<thead>
+<tr class="header">
+<th>Document</th>
+<th>Link</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>Discussion 1</td>
+<td><a href="../resources/ds100/sp19/disc1_blank.pdf">slides</a></td>
+</tr>
+</tbody>
+</table>
 <p><strong>Videos:</strong></p>
 <ul>
 <li><a href="https://www.youtube.com/playlist?list=PLQCcNQgUcDfqAD1D9g9P9SUYo0tdXQpSY">Fall 2017 Midterm Walkthrough</a> (FA18)</li>
