--- a/teaching/index.html
+++ b/teaching/index.html
@@ -42,14 +42,14 @@ Teaching – Suraj Rampure
 <table>
 <thead>
 <tr class="header">
-<th>Document</th>
-<th>Link</th>
+<th>Item</th>
+<th>Links</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td>Discussion 1</td>
-<td><a href="../resources/ds100/sp19/disc1_blank.pdf">slides</a></td>
+<td><a href="../resources/ds100/sp19/disc01_slides.pdf">slides</a>, <a href="../resources/ds100/sp19/disc01_markup.pdf">marked-up worksheet</a></td>
 </tr>
 </tbody>
 </table>
