--- a/teaching/index.html
+++ b/teaching/index.html
@@ -51,6 +51,10 @@ Teaching – Suraj Rampure
 <td>Discussion 1</td>
 <td><a href="../resources/ds100/sp19/disc01_slides.pdf">slides</a>, <a href="../resources/ds100/sp19/disc01_markup.pdf">marked-up worksheet</a></td>
 </tr>
+<tr class="even">
+<td>Discussion 3</td>
+<td><a href="../resources/ds100/sp19/disc03_markup.pdf">marked-up worksheet</a></td>
+</tr>
 </tbody>
 </table>
 <p><strong>Videos:</strong></p>
