--- a/teaching/index.html
+++ b/teaching/index.html
@@ -39,22 +39,40 @@ Teaching – Suraj Rampure
 <li>OH: Thursday, 12-2PM, Soda 411</li>
 </ul>
 <p>Fill out <a href="http://tinyurl.com/goatjames">this form</a> to tell me a bit about yourself!</p>
-<table>
+<p><br></p>
+<p><strong>Resources from this semester:</strong></p>
+<table style="width: 200%">
+<tbody>
+<table style="width:11%;">
+<colgroup>
+<col style="width: 5%" />
+<col style="width: 5%" />
+</colgroup>
 <thead>
 <tr class="header">
-<th>Item</th>
-<th>Links</th>
+<th>Week</th>
+<th>                                                                                                                                                                                   </th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td>Discussion 1</td>
-<td><a href="../resources/ds100/sp19/disc01_slides.pdf">slides</a>, <a href="../resources/ds100/sp19/disc01_markup.pdf">marked-up worksheet</a></td>
+<td>1</td>
+<td>- <a href="../resources/ds100/sp19/disc01_slides.pdf">dicussion slides</a> <br> - <a href="../resources/ds100/sp19/disc01_markup.pdf">marked-up worksheet</a></td>
 </tr>
 <tr class="even">
-<td>Discussion 3</td>
-<td><a href="../resources/ds100/sp19/disc03_markup.pdf">marked-up worksheet</a></td>
+<td>3</td>
+<td>- <a href="../resources/ds100/sp19/disc03_markup.pdf">marked-up worksheet</a></td>
 </tr>
+<tr class="odd">
+<td>4</td>
+<td>- <a href="../resources/ds100/KDE.html">walkthrough notebook on Kernel Density Estimation</a> (<a href="../resources/ds100/KDE.ipynb">raw</a>)</td>
+</tr>
+<tr class="even">
+<td>5</td>
+<td>- <a href="../resources/ds100/sp19/disc05_markup.pdf">marked-up worksheet</a> <br> - <a href="../resources/ds100/Transformations.html">notebook on Transformations</a> (<a href="../resources/ds100/Transformations.ipynb">raw</a>) <br> - <a href="../resources/ds100/eigen-singular.html">note on Eigenvalues vs. Singular Values</a></td>
+</tr>
+</tbody>
+</table>
 </tbody>
 </table>
 <p><strong>Videos:</strong></p>
