--- a/resources/ds100/KDE.html
+++ b/resources/ds100/KDE.html
@@ -13118,6 +13118,8 @@ div#notebook {
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="Kernel-Density-Estimation">Kernel Density Estimation<a class="anchor-link" href="#Kernel-Density-Estimation">&#182;</a></h1><p><strong>by Suraj Rampure</strong> (suraj.rampure@berkeley.edu), for Data 100, Spring 2019</p>
 
+Click <a href='KDE.ipynb'>here</a> to play with the interactive version of this notebook.
+
 </div>
 </div>
 </div>
