--- a/teaching/index.html
+++ b/teaching/index.html
@@ -57,7 +57,7 @@ Teaching – Suraj Rampure
 <tbody>
 <tr class="odd">
 <td>1</td>
-<td>- <a href="../resources/ds100/sp19/disc01_slides.pdf">dicussion slides</a> <br> - <a href="../resources/ds100/sp19/disc01_markup.pdf">marked-up worksheet</a></td>
+<td>- <a href="../resources/ds100/sp19/disc01_slides.pdf">discussion slides</a> <br> - <a href="../resources/ds100/sp19/disc01_markup.pdf">marked-up worksheet</a></td>
 </tr>
 <tr class="even">
 <td>3</td>
@@ -70,6 +70,10 @@ Teaching – Suraj Rampure
 <tr class="even">
 <td>5</td>
 <td>- <a href="../resources/ds100/sp19/disc05_markup.pdf">marked-up worksheet</a> <br> - <a href="../resources/ds100/Transformations.html">notebook on Transformations</a> (<a href="../resources/ds100/Transformations.ipynb">raw</a>) <br> - <a href="../resources/ds100/eigen-singular.html">note on Eigenvalues vs. Singular Values</a></td>
+</tr>
+<tr class="odd">
+<td>6</td>
+<td>- <a href="../resources/ds100/sp19/disc06_slides.pdf">discussion slides</a> <br> - <a href="../resources/ds100/sp19/disc06_markup.pdf">marked-up worksheet</a></td>
 </tr>
 </tbody>
 </table>
