--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Suraj Rampure
 <script type='text/javascript' src='http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
 </head>
 <div data-align="center">
-<p><img src='resources/pictures/mecircle.png' width=200></p>
+<p><img src='resources/pictures/lake.gif' width=200></p>
 </div>
 <h1 id="suraj-rampure">Suraj Rampure</h1>
 <p><strong><a href="index.html">Home</a></strong>   <a href="teaching/index.html">Teaching</a>   <a href="courses/index.html">Courses</a></p>
