--- a/teaching/index.html
+++ b/teaching/index.html
@@ -89,6 +89,7 @@ Teaching – Suraj Rampure
 <li><a href="../resources/ds100/linear-regression.pdf">Review slides on Linear Regression, Regularization, and Bias-Variance</a> (FA18)</li>
 <li><a href="../resources/ds100/classification.pdf">Review Slides on Classification, Logistic Regression, and Probability</a> (FA18)</li>
 <li><a href="../resources/ds100/regression-connections.html">Connections between different approaches to linear regression</a> (FA18)</li>
+<li><a href="../resources/ds100/sigmoid.html">Derivation of the Sigmoid Function</a> (SP19)</li>
 </ul>
 <hr />
 <h3 id="cs-61a-structure-and-interpretation-of-computer-programs-site">CS 61A – Structure and Interpretation of Computer Programs (<a href="http://cs61a.org">site</a>)</h3>
