--- a/teaching/index.html
+++ b/teaching/index.html
@@ -29,7 +29,7 @@ Teaching – Suraj Rampure
 <p><a href="../index.html">Home</a>   <strong><a href="index.html">Teaching</a></strong>   <a href="../courses/index.html">Courses</a></p>
 <hr />
 <h3 id="cs-198-087-introduction-to-mathematical-thinking-decal-site">CS 198-087 – Introduction to Mathematical Thinking DeCal (<a href="http://imt-decal.org">site</a>)</h3>
-<p>All resources, including the <a href="http://book.imt-decal.org">course textbook</a> are on the course website, linked above.</p>
+<p>All resources, including the <a href="http://notes.imt-decal.org">notes for the course</a> are on the course website, linked above.</p>
 <hr />
 <h3 id="data-100-principles-and-techniques-of-data-science-site">Data 100 – Principles and Techniques of Data Science (<a href="http://ds100.org">site</a>)</h3>
 <p>TA: Spring 2019, Fall 2018</p>
@@ -79,15 +79,21 @@ Teaching – Suraj Rampure
 </table>
 </tbody>
 </table>
-<p><strong>Videos:</strong></p>
+<p><strong>Discussion Walkthrough Videos:</strong></p>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=Rigtuige5bU&amp;feature=youtu.be">Discussion 6 Walkthrough</a> (SP19)</li>
+<li><a href="https://www.youtube.com/watch?v=5-hsWWR3MXY&amp;feature=youtu.be">Discussion 7 Walkthrough</a> (SP19)</li>
+<li><a href="https://www.youtube.com/watch?v=MDtI9yYJfn0&amp;feature=youtu.be">Discussion 8 Walkthrough</a> (SP19)</li>
+<li><a href="https://www.youtube.com/watch?v=FRviVt0NNhE&amp;feature=youtu.be">Discussion 9 Walkthrough</a> (SP19)</li>
+</ul>
+<p><strong>Exam Walkthrough Videos:</strong></p>
 <ul>
 <li><a href="https://www.youtube.com/playlist?list=PLQCcNQgUcDfqAD1D9g9P9SUYo0tdXQpSY">Fall 2017 Midterm Walkthrough</a> (FA18)</li>
 <li><a href="https://www.youtube.com/watch?v=5JU0Xe46DnA&amp;list=PLQCcNQgUcDfrBO7dpL-Pv6e0LYGeqsHKr">Spring 2018 Final Walkthrough</a> (FA18)</li>
 </ul>
 <p><strong>Notes and other resources</strong>:</p>
 <ul>
-<li><a href="../resources/ds100/linear-regression.pdf">Review slides on Linear Regression, Regularization, and Bias-Variance</a> (FA18)</li>
-<li><a href="../resources/ds100/classification.pdf">Review Slides on Classification, Logistic Regression, and Probability</a> (FA18)</li>
+<li><a href="../resources/ds100/midterm2review.pdf">Review slides on regression, BV, classification</a></li>
 <li><a href="../resources/ds100/regression-connections.html">Connections between different approaches to linear regression</a> (FA18)</li>
 <li><a href="../resources/ds100/sigmoid.html">Derivation of the Sigmoid Function</a> (SP19)</li>
 </ul>
