--- a/teaching/index.html
+++ b/teaching/index.html
@@ -38,7 +38,6 @@ Teaching – Suraj Rampure
 <li>Discussion: Friday, 12-1PM and 1-2PM, Etcheverry (108 and 113)</li>
 <li>OH: Thursday, 12-2PM, Soda 411</li>
 </ul>
-<p>Fill out <a href="http://tinyurl.com/goatjames">this form</a> to tell me a bit about yourself!</p>
 <p><br></p>
 <p><strong>Resources from this semester:</strong></p>
 <table style="width: 200%">
@@ -75,6 +74,10 @@ Teaching – Suraj Rampure
 <td>6</td>
 <td>- <a href="../resources/ds100/sp19/disc06_slides.pdf">discussion slides</a> <br> - <a href="../resources/ds100/sp19/disc06_markup.pdf">marked-up worksheet</a></td>
 </tr>
+<tr class="even">
+<td>10</td>
+<td>- <a href="../resources/ds100/sp19/disc10_notes.pdf">notes</a></td>
+</tr>
 </tbody>
 </table>
 </tbody>
@@ -85,15 +88,22 @@ Teaching – Suraj Rampure
 <li><a href="https://www.youtube.com/watch?v=5-hsWWR3MXY&amp;feature=youtu.be">Discussion 7 Walkthrough</a> (SP19)</li>
 <li><a href="https://www.youtube.com/watch?v=MDtI9yYJfn0&amp;feature=youtu.be">Discussion 8 Walkthrough</a> (SP19)</li>
 <li><a href="https://www.youtube.com/watch?v=FRviVt0NNhE&amp;feature=youtu.be">Discussion 9 Walkthrough</a> (SP19)</li>
+<li><a href="https://www.youtube.com/watch?v=EfK_m1jCerM&amp;feature=youtu.be">Discussion 12 Walkthrough</a> (SP19)</li>
 </ul>
 <p><strong>Exam Walkthrough Videos:</strong></p>
 <ul>
 <li><a href="https://www.youtube.com/playlist?list=PLQCcNQgUcDfqAD1D9g9P9SUYo0tdXQpSY">Fall 2017 Midterm Walkthrough</a> (FA18)</li>
 <li><a href="https://www.youtube.com/watch?v=5JU0Xe46DnA&amp;list=PLQCcNQgUcDfrBO7dpL-Pv6e0LYGeqsHKr">Spring 2018 Final Walkthrough</a> (FA18)</li>
 </ul>
-<p><strong>Notes and other resources</strong>:</p>
+<p><strong>Review Slides</strong>:</p>
 <ul>
-<li><a href="../resources/ds100/midterm2review.pdf">Review slides on regression, BV, classification</a></li>
+<li><a href="../resources/ds100/midterm2review.pdf">Midterm 2 Review Slides</a> (SP19)</li>
+<li><a href="http://www.surajrampure.com/resources/ds100/final_review_regression.pdf">Final Review Slides (regression, BV, regularization)</a> (<a href="http://www.surajrampure.com/resources/ds100/final_review_exam_markup.pdf">exam mark-up</a>) (SP19)</li>
+<li><a href="http://www.surajrampure.com/resources/ds100/final_review_classification.pdf">Final Review Slides (classification, logistic regression)</a> (SP19)</li>
+<li><a href="http://www.surajrampure.com/resources/ds100/final_review_bootstrap_sampling.pdf">Final Review Slides (sampling, bootstrapping, confidence intervals)</a> (<a href="http://www.surajrampure.com/resources/ds100/final_review_bootstrap_notebook.html">notebook</a>) (<a href="http://www.surajrampure.com/resources/ds100/final_review_probability.pdf">worksheet</a>) (SP19)</li>
+</ul>
+<p><strong>Other Notes</strong>:</p>
+<ul>
 <li><a href="../resources/ds100/regression-connections.html">Connections between different approaches to linear regression</a> (FA18)</li>
 <li><a href="../resources/ds100/sigmoid.html">Derivation of the Sigmoid Function</a> (SP19)</li>
 </ul>
