--- a/teaching/index.html
+++ b/teaching/index.html
@@ -106,6 +106,7 @@ Teaching – Suraj Rampure
 <ul>
 <li><a href="../resources/ds100/regression-connections.html">Connections between different approaches to linear regression</a> (FA18)</li>
 <li><a href="../resources/ds100/sigmoid.html">Derivation of the Sigmoid Function</a> (SP19)</li>
+<li><a href="../resources/ds100/infinity_parameters_logistic.html">Parameters Diverging to Infinity in Logistic Regression</a> (SP19)</li>
 </ul>
 <hr />
 <h3 id="cs-61a-structure-and-interpretation-of-computer-programs-site">CS 61A – Structure and Interpretation of Computer Programs (<a href="http://cs61a.org">site</a>)</h3>
